fixed weird whitespace areas

--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,10 @@ button:focus-visible {
 }
 
 
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+}
